# dnn-lang-comparison

./: .gitignore  README.md  runtests.sh
analysis/: anlalysis.ipynb  batch-size-comp.ipynb  celeba_loading.ipynb  colab_raport.py  consistency_analysis.ipynb  events_vs_perfcount.ipynb  lt_dcgan_analysis.ipynb  preprocess.py  results_concat.csv  rolling_analysis.ipynb  rolling_analysis_new.ipynb  rolling_analysis_old.ipynb  slides_part_two.ipynb  torch-compile-comp.ipynb  yolo-comp.ipynb
c++/: Makefile  README.md  fcnet.cpp  train.cpp
cudnn/: README.md  train.cpp
libtorch/: CMakeLists.txt  benchmark_runner.cpp  build.sh  model_serializer.py  run_build.sh
libtorch/src/: CMakeLists.txt  adam.cpp  adam.h  celeba.cpp  celeba.h  cifar10.cpp  cifar10.h  models.cpp  models.h
matlab/: DCGAN_test.m  FCNet_test.m  FullyConnectedNet_test.m  MNIST_parser.m  MobileNet_v2_test.m  ResNet_50_test.m  SODNet_test.m  SimpleConvNet_test.m  check_datasets.m  loadADAM.m  loadCELEBA.m  loadCIFARData.m  loadImgsAndLabels.m  loadMNISTImgsAndLabels.m  mobilenet_v2_test.m  resBlock.m  saveTrainingState.m  simple_DNN_img_classifier_test.m
paper/: 2.clf_diagrams.drawio  2.convolution.drawio  2.yolo.drawio  3.torch_modules.drawio  convolution.drawio  fcnet_diagram.drawio  scvnet_diagram.drawio  sprawozdanie.docx  torchscript_listing.cpp
python/: MNIST_parser.ipynb  datasets_parsing_test.ipynb  datasets_parsing_val.ipynb  dnn_dense_torch_MNIST.py  dupa..ipynb  loadImgsAndLabels.py  load_datasets.py  nn_tutorial.ipynb  requirements.txt  tf_benchmarks.py  tf_funcs.py  tf_mnist_test.ipynb  (+11 more)
(+67 files in other folders)
